data/all_generated_tests/raw_wast_tests/loop_ImproperFunctionCallorReturnHandling_941.wast
;; 2. **Test Description 2**:    Design a loop that uses `call_indirect` to call a function type that modifies the stack. Ensure branch instructions within the loop correctly handle potential indirect call errors by validating stack consistency post-loop execution.

(assert_invalid
  (module
    (type $sig (func (param i32) (result i32)))
    (table funcref (elem $f))
    (func $f (param $x i32) (result i32)
      (local.get $x)
      (i32.const 1)
      (i32.add))
    (func (param i32)
      (loop (result i32)
        (local.get 0)
        (call_indirect (type $sig) (i32.const 0))
        (br 0)))))
  "type mismatch"
)